--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "fruver.js",
+  "description": "Fruver Frontend (React + Firebase)",
+  "author": "Andres Osorio",
   "version": "0.1.0",
   "private": true,
+  "repository": "git@github.com:fruver/fruver.js.git",
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.52",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,10 +16,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "firebase": "^7.14.3",
+    "formik": "^2.1.4",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.28.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.28.1",
+    "react-router-dom": "^5.1.2"
   }
 }
